--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <div id="logo">
-      <a href="Index.html"><img id="logoIMG" src="./IMG/Logo/logo.png" alt=""></a>
+      <a href="index.html"><img id="logoIMG" src="./IMG/Logo/logo.png" alt=""></a>
     </div>
     <div id="menu">
       <nav>
