--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
     <div id="burguer" onclick="menuMobile()">
-      <div id="line1"></div>
+      <div id="line1" style="margin: 0;"></div>
       <div id="line2"></div>
       <div id="line3"></div>
     </div>
